--- a/sass/components/content/_about.scss
+++ b/sass/components/content/_about.scss
@@ -1,10 +1,73 @@
 .about-content {
 
-  
+  text-align: center;
 
-    h2 {
-       padding-top: 2rem;
-       color:red;
+    .contact-form h2 {
+      text-align: center;
+      position: relative;
+      top:20px;
+    }
+
+    .contact-form {
+      background-color: #f5f5f5;
+      width: 100%;
+      height: 30rem;
+
+      input[type=text],   input[type=email] {
+         margin-bottom: 1px;
+         width: 90%;
+         display: inline-block;
+         height: 2.65em;
+         border: 1px solid #ddd;
+         padding: 0 0.65em;
+         font-size: 13px;
+         line-height: normal;
+         color: #555;
+         background-color: #fff;
+         border-radius: 4px;
+         box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
+         
+       }
+
+       input[type=email] {
+         position: relative;
+         bottom:30px;
+       }
+
+       textarea {
+         position: relative;
+         bottom:60px;
+         width: 90%;
+         display: inline-block;
+         height: 15em;
+         margin-bottom: 9px;
+         border: 1px solid #ddd;
+         padding: 0 0.65em;
+         font-size: 13px;
+         line-height: normal;
+         color: #555;
+         background-color: #fff;
+         border-radius: 4px;
+         box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
+         
+       }
+
+      input[type=submit] {
+         position: relative;
+         bottom:60px;
+         width: 90%;
+         color: rgb(19, 21, 22);
+         text-transform: uppercase;
+         background-color: rgb(255, 255, 255);
+         text-decoration: none;
+         padding: 0.75rem 3rem;
+         border-width: 2px;
+         border-style: solid;
+         border-color: rgb(45, 177, 177);
+         border-image: initial;
+         border-radius: 0.25rem;
+
+       }
     }
 
  
@@ -15,6 +78,9 @@
             grid-template-rows: 1fr;
             grid-template-columns: 1fr 1fr;
             gap:50px;
+       }
+       .contact-form {
+        height: 32rem;
        }
     }
 }
