--- a/sass/components/content/_single-guest.scss
+++ b/sass/components/content/_single-guest.scss
@@ -1,39 +1,28 @@
 .entry-footer{
    display: none;
 }
-
-.guest-button a{
-   color:  #4169e1;
-}
-
-.single-guest-wrapper {
+.single-container {
    text-align: center;
-}
-.single-event {
-   display: grid;
-   grid-template-columns: 1fr 1fr;
-   grid-template-rows: 1fr;
-   text-align: center;
+
+   .single-event {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr;
+      text-align: center;
+   }
+   
 }
 
-   @include tabletQuery {
-      .single-guest-wrapper {
+
+
+@include tabletQuery {
+   
+      .single-container  {
          display: grid;
          grid-template-rows: 1fr;
          grid-template-columns: 1fr 1fr;
+         gap: 150px;
       }
-
-      .single-guest2 {
-         margin: 10px 0;
-         margin-left: 50px;
-      }
-
-      .post-thumbnail img{
-         display: block;
-         margin-left: auto;
-         margin-right: auto;
-         width: 100%;
-         height: 400px;
-      }
+      
    }
 
