--- a/sass/components/content/_vendors.scss
+++ b/sass/components/content/_vendors.scss
@@ -45,10 +45,18 @@
             margin: 0 auto;
 
             img{
-                max-width: 50%;
+                max-width: 40%;
             }
         }
     }
 
-    
+    .other-vendors{
+        h3{
+            margin: .25rem 0;
+        }
+        @include tabletQuery{
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+        }
+    }
 }
