--- a/sass/plugins/woocommerce/_products.scss
+++ b/sass/plugins/woocommerce/_products.scss
@@ -22,6 +22,9 @@ ul.products {
 			.price {
 				font-size: 2rem;
 			}
+			.currency-display {
+				text-transform: uppercase;
+			}
 
 			ul {
 				margin: 1rem 2rem 2rem;
