--- a/sass/components/content/_single-event.scss
+++ b/sass/components/content/_single-event.scss
@@ -19,6 +19,11 @@
 
 .title-description-container {
     padding: 1rem;
+    
+    @include desktopQuery {
+        padding: 1rem 2rem;
+    }
+    
 
     h1 {
         margin: 0;
