import front-page sass file

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -23,6 +23,7 @@
 @import "content/news";
 @import "content/single-news";
 @import "content/single-guest";
+@import "content/front-page";
 
 /* Page Bottom Template Part
 --------------------------------------------- */
