style home page

--- a/sass/components/content/_front-page.scss
+++ b/sass/components/content/_front-page.scss
@@ -1,4 +1,28 @@
 
+.welcome-message {
+    margin: 2rem 0;
+
+    h2 {
+        text-align: center;
+    }
+
+    p {
+        
+        margin: auto;
+        width: 95%;
+
+        @include tabletQuery {
+            width: 85%;
+        }
+
+        @include largeTabletQuery {
+     
+            width: 75%;
+        }
+  
+    }
+}
+
 .featured-events {
 
     .featured-events-heading-container {
@@ -72,5 +96,44 @@
         }
     }
 
+}
 
+.featured-guests {
+
+    .featured-guests-heading-container {
+        display: flex;
+        align-items: center;
+
+        a {
+            margin-left: 1rem;
+        }
+    }
+
+    ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+
+        @include largeTabletQuery {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 2rem;
+        }
+   
+    }
+
+    a {
+
+        img {
+            object-position: center;
+            object-fit: cover;
+            display: block;
+            margin: auto;
+            width: 100%;
+
+            @include largeTabletQuery {
+                height: 12rem;
+            }
+        }
+    }
 }
