--- a/sass/components/content/_schedule.scss
+++ b/sass/components/content/_schedule.scss
@@ -1,3 +1,23 @@
+
+
+
+.schedule-description {
+    margin: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    width: 95%;
+
+    @include tabletQuery {
+        width: 85%;
+    }
+
+    @include largeTabletQuery {
+        width: 75%;
+    }
+}
+
+
+
 .schedule-container {
     overflow: hidden;
     border-radius: 7px;
