--- a/sass/plugins/woocommerce/_components.scss
+++ b/sass/plugins/woocommerce/_components.scss
@@ -275,3 +275,28 @@ p.no-comments {
 		}
 	}
 }
+
+/**
+* Number of items in Cart and Checkout button section 
+*/
+.cart-items {
+	@include flexColumn;
+    align-items: center;
+	margin: 2rem auto 4rem;
+
+	.checkout-btn {
+		background-color: $fan-yellow;
+		padding: 0.75rem 2.5rem;
+		font-weight: 600;
+		letter-spacing: 1px;
+		text-transform: uppercase;
+		text-decoration: none;
+		transition: background-color .3s ease-in,  color .3s ease-in;
+
+		&:hover {
+			background-color: $fan-black;
+			color: $color__button-text-invert;
+			transition: background-color .3s ease-in,  color .3s ease-in;
+		}
+	}
+}
