--- a/sass/plugins/woocommerce/_products.scss
+++ b/sass/plugins/woocommerce/_products.scss
@@ -61,10 +61,13 @@ ul.products {
     		align-self: center;
     		width: 200px;
 			margin: 2rem;
+			transition: background-color .3s ease-in,  color .3s ease-in, border .3s ease-in;
 
 			&:hover {
-				background-color: $color__button_background_invert;
+				background-color: $fan-black;
 				color: $color__button-text-invert;
+				border: 2px solid $fan-black;
+				transition: background-color .3s ease-in,  color .3s ease-in, border .3s ease-in;
 			}
 		}
 	}
