--- a/sass/plugins/woocommerce/_components.scss
+++ b/sass/plugins/woocommerce/_components.scss
@@ -284,6 +284,10 @@ p.no-comments {
     align-items: center;
 	margin: 2rem auto 4rem;
 
+	.items-number {
+		font-weight: 600;
+	}
+
 	.checkout-btn {
 		background-color: $fan-yellow;
 		padding: 0.75rem 2.5rem;
