fix mobile styles for vendors page

--- a/sass/components/content/_vendors.scss
+++ b/sass/components/content/_vendors.scss
@@ -57,22 +57,21 @@ html{
     }
 
     .other-vendors{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
         h3{
             margin: .25rem 0;
+          
         }
         @include tabletQuery{
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
         }
     }
-
     .list-contain{
-        margin: 0 auto 2rem auto;
-        max-width: 10.5rem;
-
-        @include tabletQuery{
-            max-width: 100%;
-        }
+        margin: 2rem 0;
     }
 }
 
