adjust width of header image single event page

--- a/sass/components/content/_single-event.scss
+++ b/sass/components/content/_single-event.scss
@@ -8,10 +8,11 @@
     }
 
     .event-img-container {
-        img {
-            width: 144rem;
-            height: auto;
+
+        .post-thumbnail {
+            width: 27rem;
         }
+       
     }
 
     
