--- a/sass/components/content/_about.scss
+++ b/sass/components/content/_about.scss
@@ -9,7 +9,7 @@
     }
 
     .contact-form {
-      background-color: #f5f5f5;
+      background-color:rgba(255, 207, 85, 0.2);
       width: 100%;
       height: 30rem;
 
@@ -25,7 +25,7 @@
          color: #555;
          background-color: #fff;
          border-radius: 4px;
-         box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
+         box-shadow: inset 0 5px 5px rgb(0 0 0 / 8%);
          
        }
 
@@ -48,7 +48,7 @@
          color: #555;
          background-color: #fff;
          border-radius: 4px;
-         box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
+         box-shadow: inset 0 5px 5px rgb(0 0 0 / 8%);
          
        }
 
