--- a/sass/components/content/_vendors.scss
+++ b/sass/components/content/_vendors.scss
@@ -102,3 +102,83 @@ html{
 
     }
 }
+
+.vendor-form {
+
+    text-align: center;
+    background-color:rgba(255, 207, 85, 0.2);
+    width: 100%;
+    height: 44rem;
+    
+    h2 {
+       position: relative;
+       top:20px;
+    }
+
+    input[type=text], input[type=email], input[type=tel] {
+        
+        margin-bottom: 1px;
+        width: 95%;
+        display: inline-block;
+        height: 3em;
+        border: 1px solid #ddd;
+        padding: 0 0.65em;
+        font-size: 13px;
+        line-height: normal;
+        color: #555;
+        background-color: #fff;
+        border-radius: 4px;
+        box-shadow: inset 0 5px 5px rgb(0 0 0 / 8%);
+        
+      }
+
+      input[type=email] {
+        position: relative;
+        bottom:40px;
+      }
+      input[type=tel]  {
+        position: relative;
+        bottom:80px;
+      }
+
+      textarea {
+        position: relative;
+        bottom:120px;
+        width: 95%;
+        display: inline-block;
+        height: 15em;
+        margin-bottom: 9px;
+        border: 1px solid #ddd;
+        padding: 0 0.65em;
+        font-size: 13px;
+        line-height: normal;
+        color: #555;
+        background-color: #fff;
+        border-radius: 4px;
+        box-shadow: inset 0 10px 10px rgb(0 0 0 / 8%);
+        
+      }
+
+     input[type=submit] {
+        position: relative;
+        bottom:130px;
+        width: 95%;
+        color: rgb(19, 21, 22);
+        text-transform: uppercase;
+        background-color: rgb(255, 255, 255);
+        text-decoration: none;
+        padding: 0.75rem 3rem;
+        border-width: 2px;
+        border-style: solid;
+        border-color: rgb(45, 177, 177);
+        border-image: initial;
+        border-radius: 0.25rem;
+
+      }
+
+      @include tabletQuery{
+        margin:auto;
+        width: 50%;
+        height: 42rem;
+    }
+}
