--- a/sass/components/content/_single-event.scss
+++ b/sass/components/content/_single-event.scss
@@ -36,9 +36,11 @@
     display: flex;
     justify-content: space-around;
     background-color: $fan-black;
+    border-radius: 6px;
+    margin-top: 1rem;
 
     p {
-        color: $fan-teal;
+        color: $fan-white;
     }
 }
 .single-event-guest-container {
@@ -60,8 +62,8 @@
     }
 
     img {
-        max-width: 15rem;
-        height: 15rem;
+        max-width: 10rem;
+        height: 10rem;
         object-fit: cover;
         object-position: top;
         border-radius: 50%;
@@ -72,6 +74,7 @@
 .heading-container {
     display: flex;
     align-items: center;
+    margin-top: 1rem;
 
     a {
         margin-left: 1rem;
@@ -116,7 +119,7 @@
     h3 {
         margin: 0;
         position: absolute;
-        color: $fan-teal;
+        color: $fan-white;
         background-color: rgb($fan-black, 0.9);
         width: 100%;
         text-align: center;
