Add page id class to faq styles to make styles more specific

--- a/sass/components/content/_faq.scss
+++ b/sass/components/content/_faq.scss
@@ -1,4 +1,6 @@
 /* Style the buttons that are used to open and close the accordion panel */
+.page-id-37 {
+
 .accordion {
     font-size: 1rem;
     padding: .25rem 1rem;
@@ -58,4 +60,5 @@
             color: $fan-teal;
         }
     }
+}
 }
