--- a/sass/components/content/_guest.scss
+++ b/sass/components/content/_guest.scss
@@ -20,6 +20,7 @@
          
          width: 100%;
          height: 17rem;
+         object-fit: cover;
      }
 
      h2 {
@@ -50,7 +51,7 @@
     img {
          max-width: 20rem;
          height: 20rem;
-        
+    
      }
    }
 }
