--- a/sass/components/content/_single-guest.scss
+++ b/sass/components/content/_single-guest.scss
@@ -46,6 +46,7 @@
             img {
                width:100%;
                height:400px;
+               object-fit: cover;
             }
          }
       }
