--- a/sass/plugins/woocommerce/_components.scss
+++ b/sass/plugins/woocommerce/_components.scss
@@ -289,6 +289,7 @@ p.no-comments {
 	}
 }
 
+// Single Ticket register name form
 .wc-box-office-ticket-form {
 	.wc-box-office-ticket-fields {
 		color: $color__text-main;
@@ -303,5 +304,25 @@ p.no-comments {
 	}
 	.active {
 		border: none;
+	}
+}
+// Single Ticket Add to Cart button (submitting form)
+.single_add_to_cart_button {
+	display: block;
+	margin: 4rem auto;
+	background-color: $color__button_background;
+	border: 2px solid $color__button_border;
+	padding: 0.75rem 2.5rem;
+	font-weight: 600;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	text-decoration: none;
+	transition: background-color 0.3s ease-in, color 0.3s ease-in;
+
+	&:hover {
+		background-color: $fan-black;
+		border: 2px solid $fan-black;
+		color: $color__button-text-invert;
+		transition: background-color 0.3s ease-in, color 0.3s ease-in;
 	}
 }
