--- a/sass/plugins/woocommerce/_components.scss
+++ b/sass/plugins/woocommerce/_components.scss
@@ -326,3 +326,10 @@ p.no-comments {
 		transition: background-color 0.3s ease-in, color 0.3s ease-in;
 	}
 }
+
+.product_meta {
+	@include flexColumn;
+}
+.product_meta > * {
+	margin: 0.5rem 0;
+}
