--- a/sass/components/navigation/_header-nav.scss
+++ b/sass/components/navigation/_header-nav.scss
@@ -4,6 +4,7 @@
     width: 25%;
     justify-content: flex-end;
     display: flex;
+    flex-grow: 1;
 
     @include largeTabletQuery {
         width: 100%;
@@ -18,7 +19,7 @@
             margin: 0;
             // width: 100%;
         }
-        @include largeTabletQuery {
+        @include desktopQuery {
             display: none;
         }
     }
@@ -27,7 +28,7 @@
     .nav-menu {
         display: none;
 
-        @include largeTabletQuery {
+        @include desktopQuery {
             display: flex;
             justify-content: space-between;
         }
@@ -59,9 +60,17 @@
         // width: 20%;
         position: absolute;
         z-index: 99;
-        top: 1.25rem;
+        top: .5rem;
+
+        @include tabletQuery {
+            top: .9rem;
+        }
 
         @include largeTabletQuery {
+            top: 1.3rem;
+        }
+
+        @include desktopQuery {
             display: none;
         }
     }
@@ -78,7 +87,7 @@
         background-color: $color__header-background;
         padding: 7rem 2rem 2rem;
 
-		@include largeTabletQuery {
+		@include desktopQuery {
 			display: none;
 		}
     }
