Move single product styles to correct style file

--- a/sass/plugins/woocommerce/_single-product.scss
+++ b/sass/plugins/woocommerce/_single-product.scss
@@ -80,6 +80,61 @@
 				}
 			}
 		}
+
+		// Style for Choice of day dropdown
+
+		tr {
+			@include flexColumn;
+			align-items: flex-start;
+			justify-content: space-between;
+			height: 3.5rem;
+		}
+
+		// Single Ticket register name form
+		.wc-box-office-ticket-form {
+			.wc-box-office-ticket-fields {
+				color: $color__text-main;
+
+				.wc-box-office-ticket-fields-title {
+					a {
+						&:focus {
+							color: $color__text-main;
+						}
+					}
+				}
+			}
+			.active {
+				border: none;
+			}
+		}
+
+		// Single Ticket Add to Cart button (submitting form)
+		.single_add_to_cart_button {
+			display: block;
+			margin: 4rem auto;
+			background-color: $color__button_background;
+			border: 2px solid $color__button_border;
+			padding: 0.75rem 2.5rem;
+			font-weight: 600;
+			letter-spacing: 1px;
+			text-transform: uppercase;
+			text-decoration: none;
+			transition: background-color 0.3s ease-in, color 0.3s ease-in;
+
+			&:hover {
+				background-color: $fan-black;
+				border: 2px solid $fan-black;
+				color: $color__button-text-invert;
+				transition: background-color 0.3s ease-in, color 0.3s ease-in;
+			}
+		}
+
+		.product_meta {
+			@include flexColumn;
+		}
+		.product_meta > * {
+			margin: 0.5rem 0;
+		}
 	}
 }
 
