--- a/sass/plugins/woocommerce/_components.scss
+++ b/sass/plugins/woocommerce/_components.scss
@@ -268,6 +268,10 @@ p.no-comments {
 	align-items: center;
 	margin: 2rem auto 4rem;
 
+	@include largeTabletQuery {
+		grid-column: 1/4; // in large tablet mode this will span full width along with grid
+	}
+
 	.items-number {
 		font-weight: 600;
 	}
