Reverse order of product summary and image on large tablt or larger

--- a/sass/plugins/woocommerce/_single-product.scss
+++ b/sass/plugins/woocommerce/_single-product.scss
@@ -3,6 +3,11 @@
 		position: relative;
 
 		.summary {
+			@include largeTabletQuery {
+				order: -1;
+				margin-right: 2rem;
+			}
+
 			.product_title {
 				margin-bottom: 0;
 			}
