--- a/sass/plugins/woocommerce/_checkout.scss
+++ b/sass/plugins/woocommerce/_checkout.scss
@@ -1,6 +1,12 @@
+
+	input {
+		width: 100%;
+	}
+
 @media screen and (min-width: 768px) {
 
 	.col2-set {
+		
 
 		.form-row-first {
 			float: left;
@@ -18,4 +24,6 @@
 			@include column-width(2);
 		}
 	}
+
+
 }
