change footer background color

--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -1,6 +1,6 @@
 // footer partial
 footer{
-    background-color: $fan-black;
+    background-color: $color__footer-background;
     color: $fan-white;
     padding: 1.5rem;
 
