add spacing to proceed to checkout link in cart

--- a/sass/plugins/woocommerce/_tables.scss
+++ b/sass/plugins/woocommerce/_tables.scss
@@ -145,3 +145,8 @@ table.shop_table_responsive {
 		}
 	}
 }
+
+// This just adds the padding at cart page
+.wc-proceed-to-checkout{
+	margin: 2.5rem 0;
+}
