--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -1,4 +1,4 @@
-// FANDOMONIUM COLOURS
+// FANDOMONIUM COLORS
 $fan-black: #131516;
 $fan-white: #fff;
 $fan-offwhite: #F1F1F1;
@@ -8,7 +8,7 @@ $fan-yellow: #FFCF55;
 $fan-yellow-faded: #ffcf5588;
 
 
-// COLOURS
+// COLORS
 $color__main-accent: $fan-teal;
 $color__second-accent: $fan-yellow;
 
@@ -19,6 +19,11 @@ $color__background-button: #e6e6e6;
 $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
 
+$color__alert-success: $fan-yellow-faded;
+$color__alert-message: $fan-teal-faded;
+
+$color__schedule-day1: $fan-teal-faded;
+$color__schedule-day2: $fan-yellow-faded;
 
 // TYPOGRAPHY COLORS
 $color__text-main: $fan-black;
@@ -43,9 +48,11 @@ $color__nav-link-hover: $color__main-accent;
 $color__link: #303030;
 $color__link-hover: $color__main-accent;
 $color__link-visited: $color__text-main;
-$color__button_background: $color__background-body; // default button background
-$color__button_background_invert: $color__main-accent; // button background on hover
-$color__button_border: $color__main-accent; // button border
+$color__button-background: $color__background-body; // default button background
+$color__button-secondary-background: $fan-yellow;
+$color__button-background-hover: $fan-black; // button background on hover
+$color__button-border: $color__main-accent; // button border
+$color__button-border-hover: $fan-black; // button border invert
 $color__button-text: $color__text-main; // text inside default button
-$color__button-text-invert: $color__background-body; // button invert text
+$color__button-text-hover: $color__background-body; // button hover text
 
