--- a/sass/base/elements/_buttons.scss
+++ b/sass/base/elements/_buttons.scss
@@ -3,19 +3,19 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"] {
 	border: 1px solid;
-	border-color: $color__button_border;
+	border-color: $color__button-border;
 	border-radius: 3px;
-	background: $color__button_background;
+	background: $color__button-background;
 	color: rgba(0, 0, 0, 0.8);
 	line-height: 1;
 	padding: 0.6em 1em 0.4em;
 
 	&:hover {
-		border-color: $color__button_border;
+		border-color: $color__button-border;
 	}
 
 	&:active,
 	&:focus {
-		border-color: $color__button_border;
+		border-color: $color__button-border;
 	}
 }
