--- a/sass/components/content/_vendors.scss
+++ b/sass/components/content/_vendors.scss
@@ -14,19 +14,19 @@ html{
     width: 100%;
 
     a{
-        color: $fan-teal;
+        color: $color__main-accent;
         font-weight: 700;
         text-decoration: none;
         text-transform: uppercase;
         padding: 0.75rem;
-        border: 3px solid $color__button_border;
+        border: 3px solid $color__button-border;
         border-radius: .25rem;
         transition: background-color .25s ease-in;
         max-width: 12rem;
 
         &:hover{
-            color: $color__button-text-invert;
-            background-color: $color__button_background_invert;
+            color: $color__button-text-hover;
+            background-color: $color__button-background-hover;
             transition: background-color .25s ease-in,  color .3s ease-in;
         }
     }
