--- a/sass/plugins/woocommerce/_products.scss
+++ b/sass/plugins/woocommerce/_products.scss
@@ -3,7 +3,6 @@ ul.products {
 	padding: 0;
 	display: grid;
 	grid-template-columns: 1fr;
-	// gap: 0 2rem;
 
 	@include tabletQuery {
 		grid-template-columns: 1fr 1fr;
@@ -52,8 +51,8 @@ ul.products {
 
 		// WooCommerce "add to cart" aka CTA to single product page
 		.button {
-			background-color: $color__button_background;
-			border: 2px solid $color__button_border;
+			background-color: $color__button-background;
+			border: 2px solid $color__button-border;
 			padding: 0.75rem 2.5rem;
 			font-weight: 600;
 			letter-spacing: 0.5px;
@@ -64,9 +63,9 @@ ul.products {
 			transition: background-color .3s ease-in,  color .3s ease-in, border .3s ease-in;
 
 			&:hover {
-				background-color: $fan-black;
-				color: $color__button-text-invert;
-				border: 2px solid $fan-black;
+				background-color: $color__button-background-hover;
+				color: $color__button-text-hover;
+				border: 2px solid $color__button-background-hover;
 				transition: background-color .3s ease-in,  color .3s ease-in, border .3s ease-in;
 			}
 		}
