Add missing hover styles to buttons

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -55,4 +55,4 @@ $color__button-border: $color__main-accent; // button border
 $color__button-border-hover: $fan-black; // button border invert
 $color__button-text: $color__text-main; // text inside default button
 $color__button-text-hover: $color__background-body; // button hover text
-
+$color__border-input: #ccc;
