--- a/sass/base/typography/_copy.scss
+++ b/sass/base/typography/_copy.scss
@@ -36,7 +36,7 @@ var {
 
 abbr,
 acronym {
-	border-bottom: 1px dotted $color__border-abbr;
+	border-bottom: 1px dotted $color__main-accent;
 	cursor: help;
 }
 
