--- a/sass/components/content/_about.scss
+++ b/sass/components/content/_about.scss
@@ -61,11 +61,16 @@
          background-color: rgb(255, 255, 255);
          text-decoration: none;
          padding: 0.75rem 3rem;
-         border-width: 2px;
-         border-style: solid;
-         border-color: rgb(45, 177, 177);
+         border: 2px solid $color__main-accent;
          border-image: initial;
-         border-radius: 0.25rem;
+         transition: all .3s ease-in;
+
+         &:hover {
+          background-color: $color__button-background-hover;
+          color: $color__button-text-hover;
+          border: 2px solid $color__button-background-hover;
+          transition: all .3s ease-in;
+         }
 
        }
     }
