--- a/sass/components/content/_page-bottom.scss
+++ b/sass/components/content/_page-bottom.scss
@@ -15,14 +15,14 @@
             padding: 0.75rem 3rem;
             background-color: $color__button-background;
             border: 2px solid $color__button-border;
-            border-radius: .25rem;
-            transition: background-color .3s ease-in;
+            transition: all .3s ease-in;
 
 
             &:hover{
                 color: $color__button-text-hover;
                 background-color: $color__button-background-hover;
-                transition: background-color .3s ease-in,  color .3s ease-in;
+                border: 2px solid $color__button-background-hover;
+                transition: all .3s ease-in;
             }
             &:focus {
                 border: 1px dotted $fan-black;
