--- a/sass/components/content/_vendors.scss
+++ b/sass/components/content/_vendors.scss
@@ -168,12 +168,18 @@ html{
         background-color: rgb(255, 255, 255);
         text-decoration: none;
         padding: 0.75rem 3rem;
-        border-width: 2px;
-        border-style: solid;
-        border-color: rgb(45, 177, 177);
+        border: 2px solid $fan-teal;
         border-image: initial;
-        border-radius: 0.25rem;
 
+        &:hover {
+            color: $color__button-text-hover;
+            background-color: $color__button-background-hover;
+            border: 2px solid $color__button-background-hover;
+            transition: all .3s ease-in;
+        }
+        &:focus {
+            border: 1px dotted $fan-black;
+        }
       }
 
       @include tabletQuery{
