Edit style for apply as vendor cta

--- a/sass/components/content/_vendors.scss
+++ b/sass/components/content/_vendors.scss
@@ -20,14 +20,14 @@ html{
         text-transform: uppercase;
         padding: 0.75rem;
         border: 3px solid $color__button-border;
-        border-radius: .25rem;
-        transition: background-color .25s ease-in;
+        transition: all .3s ease-in;
         max-width: 12rem;
 
         &:hover{
-            color: $color__button-text-hover;
-            background-color: $color__button-background-hover;
-            transition: background-color .25s ease-in,  color .3s ease-in;
+            color: $fan-black;
+            background-color: $color__button-secondary-background;
+            border: 3px solid $color__button-secondary-background;
+            transition: all .3s ease-in;
         }
     }
 
