--- a/sass/components/content/_vendors.scss
+++ b/sass/components/content/_vendors.scss
@@ -99,6 +99,10 @@ html{
             margin: 0 ;
         }
 
+        .tier-badge{
+            display: block;
+            margin: 1rem 0 2rem 0;
+        }
 
     }
 }
